fix: prevent text from jumpping

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,3 +36,7 @@ body {
   box-shadow: inset 0 0 10px 10px var(--scroll-color, #333);
   border-left: solid var(--gap) transparent;
 }
+
+input, textarea {
+  line-height: 1.25;
+}
